fixed indentation on html page

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
                   >
                 </li>
                 <li class="nav-item ">
-                  <a class="portfolio-btn btn nav-link text-muted"
-                    >Portfolio</a
-                  >
+                  <a class="portfolio-btn btn nav-link text-muted">Portfolio</a>
                 </li>
                 <li class="nav-item">
                   <a class="contact-btn btn nav-link text-muted">Contact</a>
@@ -70,9 +68,7 @@
                   >
                 </li>
                 <li class="nav-item ">
-                  <a class="portfolio-btn btn nav-link text-muted"
-                    >Portfolio</a
-                  >
+                  <a class="portfolio-btn btn nav-link text-muted">Portfolio</a>
                 </li>
                 <li class="nav-item">
                   <a class="contact-btn btn nav-link text-muted">Contact</a>
@@ -89,11 +85,10 @@
             <div class="border-bottom border-secondary mb-3">
               <h1 class="text-info">Full-Stack Web Developer</h1>
             </div>
-            <section class="d-lg-inline-flex ">
+            <section class="d-lg-inline-flex">
               <img
-                class="rounded"
+                class="rounded w-20"
                 id="bio-image"
-         
                 src="./files/profile.png"
                 alt="Profile Image"
               />
@@ -122,54 +117,92 @@
 
             <div class="container-fluid mt-4">
               <div class="row justify-content-center">
-
                 <div class="col-auto mb-3">
-                  <div class="card" >
+                  <div class="card">
                     <img
                       src="./files/stock-generator.PNG"
                       class="card-img-top"
                       alt="stock-generator"
-                      />
-                      <a href="https://mitchelle-b.github.io/Asset-Portfolio-Generator/" target=”_blank”>
-                    <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Asset Portfolio Generator</h5>
-                    </div>
+                    />
+                    <a
+                      href="https://mitchelle-b.github.io/Asset-Portfolio-Generator/"
+                      target="”_blank”"
+                    >
+                      <div class="row card-img-overlay">
+                        <h5
+                          class="col-12 align-self-center bg-info text-white text-center p-2"
+                        >
+                          Asset Portfolio Generator
+                        </h5>
+                      </div></a
+                    >
                     <div class="card card-body">
-                      <a href="https://github.com/Mitchelle-B/Asset-Portfolio-Generator" target=”_blank” class="card-link">Github</a>
+                      <a
+                        href="https://github.com/Mitchelle-B/Asset-Portfolio-Generator"
+                        target="”_blank”"
+                        class="card-link"
+                        >Github</a
+                      >
                     </div>
                   </div>
                 </div>
 
                 <div class="col-auto mb-3">
-                  <div class="card" >
+                  <div class="card">
                     <img
                       src="./files/weather.PNG"
                       class="card-img-top"
                       alt="weather"
-                      />
-                      <a href="https://pete331.github.io/Weather-Dashboard/" target=”_blank”>
-                    <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Weather Dashboard</h5>
-                    </div>
+                    />
+                    <a
+                      href="https://pete331.github.io/Weather-Dashboard/"
+                      target="”_blank”"
+                    >
+                      <div class="row card-img-overlay">
+                        <h5
+                          class="col-12 align-self-center bg-info text-white text-center p-2"
+                        >
+                          Weather Dashboard
+                        </h5>
+                      </div></a
+                    >
                     <div class="card card-body">
-                      <a href="https://github.com/Pete331/Weather-Dashboard" target=”_blank” class="card-link">Github</a>
+                      <a
+                        href="https://github.com/Pete331/Weather-Dashboard"
+                        target="”_blank”"
+                        class="card-link"
+                        >Github</a
+                      >
                     </div>
                   </div>
                 </div>
 
                 <div class="col-auto mb-3">
-                  <div class="card" >
+                  <div class="card">
                     <img
                       src="./files/Scheduler.PNG"
                       class="card-img-top"
                       alt="scheduler"
-                      />
-                      <a href="https://pete331.github.io/Day-Scheduler/" target=”_blank”>
-                    <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Work Day Scheduler</h5>
-                    </div>
+                    />
+                    <a
+                      href="https://pete331.github.io/Day-Scheduler/"
+                      target="”_blank”"
+                    >
+                      <div class="row card-img-overlay">
+                        <h5
+                          class="col-12 align-self-center bg-info text-white text-center p-2"
+                        >
+                          Work Day Scheduler
+                        </h5>
+                      </div></a
+                    >
                     <div class="card card-body">
-                      <a href="https://github.com/Pete331/Day-Scheduler" target=”_blank” class="card-link">Github</a>
+                      <a
+                        href="https://github.com/Pete331/Day-Scheduler"
+                        target="”_blank”"
+                        class="card-link"
+                        >Github</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -180,47 +213,86 @@
                       src="./files/Heriseon.PNG"
                       class="card-img-top"
                       alt="Heriseon"
-                      />
-                      <a href="https://pete331.github.io/Week-1---Heroseon/" target=”_blank”>
-                    <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Heriseon</h5>
-                    </div>
+                    />
+                    <a
+                      href="https://pete331.github.io/Week-1---Heroseon/"
+                      target="”_blank”"
+                    >
+                      <div class="row card-img-overlay">
+                        <h5
+                          class="col-12 align-self-center bg-info text-white text-center p-2"
+                        >
+                          Heriseon
+                        </h5>
+                      </div></a
+                    >
                     <div class="card card-body">
-                      <a href="https://github.com/Pete331/Week-1---Heroseon" target=”_blank” class="card-link">Github</a>
+                      <a
+                        href="https://github.com/Pete331/Week-1---Heroseon"
+                        target="”_blank”"
+                        class="card-link"
+                        >Github</a
+                      >
                     </div>
                   </div>
                 </div>
-  
+
                 <div class="col-auto mb-3">
                   <div class="card">
                     <img
                       src="./files/facedetector.PNG"
                       class="card-img-top"
                       alt="face detector"
-                      />
-                      <a href="https://smart-brain331.herokuapp.com/" target=”_blank”>
-                    <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Face Detector</h5>
-                    </div>
+                    />
+                    <a
+                      href="https://smart-brain331.herokuapp.com/"
+                      target="”_blank”"
+                    >
+                      <div class="row card-img-overlay">
+                        <h5
+                          class="col-12 align-self-center bg-info text-white text-center p-2"
+                        >
+                          Face Detector
+                        </h5>
+                      </div></a
+                    >
                     <div class="card card-body">
-                      <a href="https://github.com/Pete331/smart-brain" target=”_blank” class="card-link">Github</a>
+                      <a
+                        href="https://github.com/Pete331/smart-brain"
+                        target="”_blank”"
+                        class="card-link"
+                        >Github</a
+                      >
                     </div>
                   </div>
                 </div>
-  
+
                 <div class="col-auto mb-3">
-                  <div class="card" >
+                  <div class="card">
                     <img
                       src="./files/Robofriends.PNG"
                       class="card-img-top"
                       alt="robofriends"
-                      />
-                      <a href="https://pete331.github.io/robofriends/" target=”_blank”>
-                    <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Robofriends</h5>
-                    </div>
+                    />
+                    <a
+                      href="https://pete331.github.io/robofriends/"
+                      target="”_blank”"
+                    >
+                      <div class="row card-img-overlay">
+                        <h5
+                          class="col-12 align-self-center bg-info text-white text-center p-2"
+                        >
+                          Robofriends
+                        </h5>
+                      </div></a
+                    >
                     <div class="card card-body">
-                      <a href="https://github.com/Pete331/robofriends" target=”_blank” class="card-link">Github</a>
+                      <a
+                        href="https://github.com/Pete331/robofriends"
+                        target="”_blank”"
+                        class="card-link"
+                        >Github</a
+                      >
                     </div>
                   </div>
                 </div>
