updated portfolio page with hover classes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="row bg-white border border-secondary">
           <div class="col-12 p-4">
             <div class="border-bottom border-secondary mb-3">
-              <h1 class="text-info">Full-Stack Web Developer</h1>
+              <h2 class="text-info">Full-Stack Web Developer</h2>
             </div>
             <section class="d-lg-inline-flex">
               <img
@@ -110,190 +110,172 @@
 
       <div class="portfolio container d-none">
         <div class="row bg-white border border-secondary">
-          <div class="col-sm-12 p-4">
+          <div class="col-12 p-4">
             <div class="border-bottom border-secondary mb-3">
-              <h1 class="text-info">Portfolio</h1>
+              <h2 class="text-info">Portfolio</h2>
             </div>
 
             <div class="container-fluid mt-4">
-              <div class="row justify-content-center">
-                <div class="col-auto mb-3">
-                  <div class="card">
+              <div class="row ">
+                <div class="portfolio-div col-lg-4 col-md-6 mb-3">
+                  <div class="img-thumb">
                     <img
                       src="./files/stock-generator.PNG"
                       class="card-img-top"
                       alt="stock-generator"
                     />
+                  </div>
+                  <div class="img-caption p-3 d-none">
+                    <h3 class="text-center text-info">
+                      Stock Portfolio Generator
+                    </h3>
                     <a
+                      class="btn btn-info btn-block"
                       href="https://mitchelle-b.github.io/Asset-Portfolio-Generator/"
                       target="”_blank”"
-                    >
-                      <div class="row card-img-overlay">
-                        <h5
-                          class="col-12 align-self-center bg-info text-white text-center p-2"
-                        >
-                          Asset Portfolio Generator
-                        </h5>
-                      </div></a
-                    >
-                    <div class="card card-body">
-                      <a
-                        href="https://github.com/Mitchelle-B/Asset-Portfolio-Generator"
-                        target="”_blank”"
-                        class="card-link"
-                        >Github</a
-                      >
-                    </div>
+                      >View Project <i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                    <a
+                      href="https://github.com/Mitchelle-B/Asset-Portfolio-Generator"
+                      target="”_blank”"
+                      class="btn btn-info btn-block"
+                      >Github<i class="fa fa-chevron-circle-right"></i
+                    ></a>
                   </div>
                 </div>
 
-                <div class="col-auto mb-3">
-                  <div class="card">
+                <div class="portfolio-div col-lg-4 col-md-6 mb-3">
+                  <div class="img-thumb">
                     <img
                       src="./files/weather.PNG"
                       class="card-img-top"
                       alt="weather"
                     />
+                  </div>
+                  <div class="img-caption p-3 d-none">
+                    <h3 class="text-center text-info">
+                      Weather Dashboard
+                    </h3>
                     <a
+                      class="btn btn-info btn-block"
                       href="https://pete331.github.io/Weather-Dashboard/"
                       target="”_blank”"
-                    >
-                      <div class="row card-img-overlay">
-                        <h5
-                          class="col-12 align-self-center bg-info text-white text-center p-2"
-                        >
-                          Weather Dashboard
-                        </h5>
-                      </div></a
-                    >
-                    <div class="card card-body">
-                      <a
-                        href="https://github.com/Pete331/Weather-Dashboard"
-                        target="”_blank”"
-                        class="card-link"
-                        >Github</a
-                      >
-                    </div>
+                      >View Project <i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                    <a
+                      href="https://github.com/Pete331/Weather-Dashboard"
+                      target="”_blank”"
+                      class="btn btn-info btn-block"
+                      >Github<i class="fa fa-chevron-circle-right"></i
+                    ></a>
                   </div>
                 </div>
 
-                <div class="col-auto mb-3">
-                  <div class="card">
+                <div class="portfolio-div col-lg-4 col-md-6 mb-3">
+                  <div class="img-thumb">
                     <img
                       src="./files/Scheduler.PNG"
                       class="card-img-top"
                       alt="scheduler"
                     />
+                  </div>
+                  <div class="img-caption p-3 d-none">
+                    <h3 class="text-center text-info">
+                      Work Day Scheduler
+                    </h3>
                     <a
+                      class="btn btn-info btn-block"
                       href="https://pete331.github.io/Day-Scheduler/"
                       target="”_blank”"
-                    >
-                      <div class="row card-img-overlay">
-                        <h5
-                          class="col-12 align-self-center bg-info text-white text-center p-2"
-                        >
-                          Work Day Scheduler
-                        </h5>
-                      </div></a
-                    >
-                    <div class="card card-body">
-                      <a
-                        href="https://github.com/Pete331/Day-Scheduler"
-                        target="”_blank”"
-                        class="card-link"
-                        >Github</a
-                      >
-                    </div>
+                      >View Project <i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                    <a
+                      href="https://github.com/Pete331/Day-Scheduler"
+                      target="”_blank”"
+                      class="btn btn-info btn-block"
+                      >Github<i class="fa fa-chevron-circle-right"></i
+                    ></a>
                   </div>
                 </div>
 
-                <div class="col-auto mb-3">
-                  <div class="card">
+                <div class="portfolio-div col-lg-4 col-md-6 mb-3">
+                  <div class="img-thumb">
                     <img
                       src="./files/Heriseon.PNG"
                       class="card-img-top"
                       alt="Heriseon"
                     />
+                  </div>
+                  <div class="img-caption p-3 d-none">
+                    <h3 class="text-center text-info">
+                      Heriseon
+                    </h3>
                     <a
+                      class="btn btn-info btn-block"
                       href="https://pete331.github.io/Week-1---Heroseon/"
                       target="”_blank”"
-                    >
-                      <div class="row card-img-overlay">
-                        <h5
-                          class="col-12 align-self-center bg-info text-white text-center p-2"
-                        >
-                          Heriseon
-                        </h5>
-                      </div></a
-                    >
-                    <div class="card card-body">
-                      <a
-                        href="https://github.com/Pete331/Week-1---Heroseon"
-                        target="”_blank”"
-                        class="card-link"
-                        >Github</a
-                      >
-                    </div>
+                      >View Project <i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                    <a
+                      href="https://github.com/Pete331/Week-1---Heroseon"
+                      target="”_blank”"
+                      class="btn btn-info btn-block"
+                      >Github<i class="fa fa-chevron-circle-right"></i
+                    ></a>
                   </div>
                 </div>
 
-                <div class="col-auto mb-3">
-                  <div class="card">
+                <div class="portfolio-div col-lg-4 col-md-6 mb-3">
+                  <div class="img-thumb">
                     <img
                       src="./files/facedetector.PNG"
                       class="card-img-top"
                       alt="face detector"
                     />
+                  </div>
+                  <div class="img-caption p-3 d-none">
+                    <h3 class="text-center text-info">
+                      Face Detector
+                    </h3>
                     <a
+                      class="btn btn-info btn-block"
                       href="https://smart-brain331.herokuapp.com/"
                       target="”_blank”"
-                    >
-                      <div class="row card-img-overlay">
-                        <h5
-                          class="col-12 align-self-center bg-info text-white text-center p-2"
-                        >
-                          Face Detector
-                        </h5>
-                      </div></a
-                    >
-                    <div class="card card-body">
-                      <a
-                        href="https://github.com/Pete331/smart-brain"
-                        target="”_blank”"
-                        class="card-link"
-                        >Github</a
-                      >
-                    </div>
+                      >View Project <i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                    <a
+                      href="https://github.com/Pete331/smart-brain"
+                      target="”_blank”"
+                      class="btn btn-info btn-block"
+                      >Github<i class="fa fa-chevron-circle-right"></i
+                    ></a>
                   </div>
                 </div>
 
-                <div class="col-auto mb-3">
-                  <div class="card">
+                <div class="portfolio-div col-lg-4 col-md-6 mb-3">
+                  <div class="img-thumb">
                     <img
                       src="./files/Robofriends.PNG"
                       class="card-img-top"
                       alt="robofriends"
                     />
+                  </div>
+                  <div class="img-caption p-3 d-none">
+                    <h3 class="text-center text-info">
+                      Robofriends
+                    </h3>
                     <a
+                      class="btn btn-info btn-block"
                       href="https://pete331.github.io/robofriends/"
                       target="”_blank”"
-                    >
-                      <div class="row card-img-overlay">
-                        <h5
-                          class="col-12 align-self-center bg-info text-white text-center p-2"
-                        >
-                          Robofriends
-                        </h5>
-                      </div></a
-                    >
-                    <div class="card card-body">
-                      <a
-                        href="https://github.com/Pete331/robofriends"
-                        target="”_blank”"
-                        class="card-link"
-                        >Github</a
-                      >
-                    </div>
+                      >View Project <i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                    <a
+                      href="https://github.com/Pete331/robofriends"
+                      target="”_blank”"
+                      class="btn btn-info btn-block"
+                      >Github<i class="fa fa-chevron-circle-right"></i
+                    ></a>
                   </div>
                 </div>
               </div>
@@ -306,7 +288,7 @@
         <div class="row bg-white border border-secondary">
           <div class="col-sm-12 p-4">
             <div class="border-bottom border-secondary mb-3">
-              <h1 class="text-info">Contact</h1>
+              <h2 class="text-info">Contact</h2>
             </div>
             <h5>Submit the below form to recieve a copy of my resumé</h5>
             <!-- Begin Mailchimp Signup Form -->
