updated about me text

--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
                 UWA, I spent several years working on our family farm. I have
                 spent a couple of years with NAB agribusiness gaining experience
                 in the banking sector being exposed to different ag industries.
-                I am currently working at Grain Brokers Australia and am looking
-                to further my interest in programming. To be continued….. and
-                fleshed out
+                I am currently working for Grain Brokers Australia as a Grain Broker while studying to become a full-stack developer. 
+                <br> <br> I'm currently doing a full-stack web-development bootcamp run by Trilogy Education Services.
+                My skill-set includes but is not limited to: HTML, CSS, Bootstrap, Javascript, JQuery, Node.js
+                
               </p>
             </section>
           </div>
@@ -290,7 +291,7 @@
             <div class="border-bottom border-secondary mb-3">
               <h2 class="text-info">Contact</h2>
             </div>
-            <h5>Submit the below form to recieve a copy of my resumé</h5>
+            <h5>Submit the below form to recieve a copy of my résumé</h5>
             <!-- Begin Mailchimp Signup Form -->
             <div id="mc_embed_signup">
               <form
@@ -437,7 +438,8 @@
           <i class="fab fa-facebook fa-2x"></i>
         </a>
       </div>
-      © 2020 - Designed & Coded by Peter Brennan
+      © 2020 - Designed & Coded by Peter Brennan <br />
+      Perth - Australia
     </footer>
 
     <script
