--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <header class="border-bottom border-dark mb-3 sticky-top">
         <!-- Menu hides when smaller than 768px -->
         <div class="row">
-          <div class="col-3 d-none d-md-block bg-info navbar ">
+          <div class="col-3 d-none d-md-block bg-info navbar">
             <div class="text-center text-light" id="name">Peter Brennan</div>
           </div>
           <div class="col-9 d-none d-md-block bg-white">
@@ -41,7 +41,7 @@
                     >About</a
                   >
                 </li>
-                <li class="nav-item ">
+                <li class="nav-item">
                   <a class="portfolio-btn btn nav-link text-muted">Portfolio</a>
                 </li>
                 <li class="nav-item">
@@ -55,7 +55,7 @@
         <!-- Menu shows when smaller than 768px -->
         <div class="">
           <div class="row d-md-none">
-            <div class="col-12 text-center navbar-brand bg-info text-light ">
+            <div class="col-12 text-center navbar-brand bg-info text-light">
               Peter Brennan
             </div>
           </div>
@@ -67,7 +67,7 @@
                     >About</a
                   >
                 </li>
-                <li class="nav-item ">
+                <li class="nav-item">
                   <a class="portfolio-btn btn nav-link text-muted">Portfolio</a>
                 </li>
                 <li class="nav-item">
@@ -99,10 +99,13 @@
                 UWA, I spent several years working on our family farm. I have
                 spent a couple of years with NAB agribusiness gaining experience
                 in the banking sector being exposed to different ag industries.
-                I am currently working for Grain Brokers Australia as a Grain Broker while studying to become a full-stack developer. 
-                <br> <br> I'm currently doing a full-stack web-development bootcamp run by Trilogy Education Services.
-                My skill-set includes but is not limited to: HTML, CSS, Bootstrap, Javascript, JQuery, Node.js
-                
+                I am currently working for Grain Brokers Australia as a Grain
+                Broker while studying to become a full-stack developer.
+                <br />
+                <br />
+                I'm currently doing a full-stack web-development bootcamp run by
+                Trilogy Education Services. My skill-set includes but is not
+                limited to: HTML, CSS, Bootstrap, Javascript, JQuery, Node.js
               </p>
             </section>
           </div>
@@ -115,9 +118,91 @@
             <div class="border-bottom border-secondary mb-3">
               <h2 class="text-info">Portfolio</h2>
             </div>
-
             <div class="container-fluid mt-4">
-              <div class="row ">
+              <div class="row">
+
+
+                <div class="portfolio-div col-lg-4 col-md-6 mb-3">
+                  <div class="img-thumb">
+                    <img
+                      src="./files/hackathon.PNG"
+                      class="card-img-top"
+                      alt="hackathon"
+                    />
+                  </div>
+                  <div class="img-caption p-3 d-none">
+                    <h3 class="text-center text-info">
+                      The Hackathon Finder
+                    </h3>
+                    <a
+                      class="btn btn-info btn-block"
+                      href="https://pacific-bayou-03953.herokuapp.com/"
+                      target="”_blank”"
+                      >View Project <i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                    <a
+                      href="https://github.com/Pete331/project-2"
+                      target="”_blank”"
+                      class="btn btn-info btn-block"
+                      >Github<i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                  </div>
+                </div>
+
+                <div class="portfolio-div col-lg-4 col-md-6 mb-3">
+                  <div class="img-thumb">
+                    <img
+                      src="./files/eat-it.PNG"
+                      class="card-img-top"
+                      alt="eat-it"
+                    />
+                  </div>
+                  <div class="img-caption p-3 d-none">
+                    <h3 class="text-center text-info">
+                      Eat the Burger
+                    </h3>
+                    <a
+                      class="btn btn-info btn-block"
+                      href="https://eat-it331.herokuapp.com/"
+                      target="”_blank”"
+                      >View Project <i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                    <a
+                      href="https://github.com/Pete331/Eat-It"
+                      target="”_blank”"
+                      class="btn btn-info btn-block"
+                      >Github<i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                  </div>
+                </div>
+
+                <div class="portfolio-div col-lg-4 col-md-6 mb-3">
+                  <div class="img-thumb">
+                    <img
+                      src="./files/note-taker.PNG"
+                      class="card-img-top"
+                      alt="note-taker"
+                    />
+                  </div>
+                  <div class="img-caption p-3 d-none">
+                    <h3 class="text-center text-info">
+                      Note Taker
+                    </h3>
+                    <a
+                      class="btn btn-info btn-block"
+                      href="https://note-taker331.herokuapp.com/"
+                      target="”_blank”"
+                      >View Project <i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                    <a
+                      href="https://github.com/Pete331/Note-Taker"
+                      target="”_blank”"
+                      class="btn btn-info btn-block"
+                      >Github<i class="fa fa-chevron-circle-right"></i
+                    ></a>
+                  </div>
+                </div>
+
                 <div class="portfolio-div col-lg-4 col-md-6 mb-3">
                   <div class="img-thumb">
                     <img
@@ -350,12 +435,12 @@
                     <div
                       class="response"
                       id="mce-error-response"
-                      style="display:none"
+                      style="display: none;"
                     ></div>
                     <div
                       class="response"
                       id="mce-success-response"
-                      style="display:none"
+                      style="display: none;"
                     ></div>
                   </div>
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -389,7 +474,7 @@
           src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
         ></script>
         <script type="text/javascript">
-          (function($) {
+          (function ($) {
             window.fnames = new Array();
             window.ftypes = new Array();
             fnames[1] = "NAME";
