added skills section with logos

--- a/index.html
+++ b/index.html
@@ -93,21 +93,153 @@
                 alt="Profile Image"
               />
               <p class="p-3">
-                I grew up on our family farm in Wongan Hills, developing a love
-                and passion for agriculture and technology. After completing a
+                I grew up on our family farm near Wongan Hills in the heart of
+                the Western Australian Wheatbelt, here I developed a love and
+                passion for agriculture and technology. After completing a
                 Bachelor of Science in Agriculture and a Bachelor of Commerce at
                 UWA, I spent several years working on our family farm. I have
                 spent a couple of years with NAB agribusiness gaining experience
                 in the banking sector being exposed to different ag industries.
-                I am currently working for Grain Brokers Australia as a Grain Broker while studying in full-stack web developing. 
-                <br> <br> I'm currently doing a full-stack web-development bootcamp run by Trilogy Education Services.
-                My skill-set includes but is not limited to: HTML, CSS, Bootstrap, Javascript, JQuery, Node.js
-                
+                I am currently working for Grain Brokers Australia as a Grain
+                Broker while completing a certificate in full-stack web
+                development.
+                <br />
+                <br />
+                I'm currently doing a full-stack web-development bootcamp run by
+                Trilogy Education Services.
               </p>
             </section>
+
+            <div class="border-bottom border-secondary mt-5 mb-5">
+              <h2 class="text-info">Skills</h2>
+            </div>
+            <div class="card-content mb-5">
+              <div class="row text-center">
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/html5.png"
+                    class="responsive-img"
+                  />HTML5
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/css3.png"
+                    class="responsive-img"
+                  />CSS3
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/bootstrap.png"
+                    class="responsive-img"
+                  />Bootstrap
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/materialize.png"
+                    class="responsive-img"
+                  />Materialize
+                </div>
+              </div>
+            </div>
+            <div class="card-content mb-5">
+              <div class="row text-center">
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/react.png"
+                    class="responsive-img"
+                  />React
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/javascript.png"
+                    class="responsive-img"
+                  />Javascript
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/jquery.png"
+                    class="responsive-img"
+                  />jQuery
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/nodejs.png"
+                    class="responsive-img"
+                  />Node
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/express.png"
+                    class="responsive-img"
+                  />express
+                </div>
+              </div>
+            </div>
+
+            <div class="card-content mb-5">
+              <div class="row text-center">
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/mongodb.png"
+                    class="responsive-img"
+                  />MongoDB
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/mysql.png"
+                    class="responsive-img"
+                  />MySQL
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/postgresql.png"
+                    class="responsive-img"
+                  />PostgreSQL
+                </div>
+              </div>
+            </div>
+            <div class="card-content mb-5">
+              <div class="row text-center">
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/github.png"
+                    class="responsive-img"
+                  />Github
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/gitkraken.png"
+                    class="responsive-img"
+                  />GitKraken
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="./assets/img/heroku.png"
+                    class="responsive-img"
+                  />Heroku
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
+
+      <!-- Portfolio Page starts here -->
 
       <div class="portfolio container d-none">
         <div class="row bg-white border border-secondary">
@@ -117,8 +249,6 @@
             </div>
             <div class="container-fluid mt-4">
               <div class="row">
-
-
                 <div class="portfolio-div col-lg-4 col-md-6 mb-3">
                   <div class="img-thumb">
                     <img
