--- a/index.html
+++ b/index.html
@@ -85,35 +85,44 @@
             <div class="border-bottom border-secondary mb-3">
               <h2 class="text-info">Full-Stack Web Developer</h2>
             </div>
-            <section class="d-lg-inline-flex">
+            <section class="">
               <img
                 class="rounded w-20"
                 id="bio-image"
                 src="./files/profile.png"
                 alt="Profile Image"
               />
-              <p class="p-3">
-                I grew up on our family farm near Wongan Hills in the heart of
-                the Western Australian Wheatbelt, here I developed a love and
-                passion for agriculture and technology. After completing a
-                Bachelor of Science in Agriculture and a Bachelor of Commerce at
-                UWA, I spent several years working on our family farm. I have
-                spent a couple of years with NAB agribusiness gaining experience
-                in the banking sector being exposed to different ag industries.
-                I am currently working for Grain Brokers Australia as a Grain
-                Broker while completing a certificate in full-stack web
-                development.
-                <br />
-                <br />
-                I'm currently doing a full-stack web-development bootcamp run by
-                Trilogy Education Services.
-              </p>
+              <div class="p-3">
+                <p>
+                  Hi there! I am a full-stack developer having completed my
+                  certificate in full stack web development at the University of
+                  Western Australia, check out my portfolio for some of the
+                  projects I have created and been involved in. I have
+                  thoroughly enjoyed the program and look forward to what the
+                  future holds for me within this field.
+                </p>
+                <h3 class="text-info">My Background</h3>
+                <p>
+                  I grew up on our family farm near Wongan Hills in the heart of
+                  the Western Australian Wheatbelt, here I developed a love and
+                  passion for agriculture and technology. After completing a
+                  Bachelor of Science in Agriculture and a Bachelor of Commerce
+                  at UWA, I spent several years working on our family farm. I
+                  have spent a couple of years with NAB agribusiness gaining
+                  experience in the banking sector being exposed to different ag
+                  industries. I am currently working for Grain Brokers Australia
+                  as a Grain Broker while completing a certificate in full-stack
+                  web development.
+                </p>
+              </div>
             </section>
 
             <div class="border-bottom border-secondary mt-5 mb-5">
               <h2 class="text-info">Skills</h2>
             </div>
-            <div class="card-content mb-5">
+
+            <div class="card-content mb-5 border">
+              <h3 class="text-info text-center">Front-End</h3>
               <div class="row text-center">
                 <div class="col s4 m2">
                   <img
@@ -145,7 +154,9 @@
                 </div>
               </div>
             </div>
-            <div class="card-content mb-5">
+
+            <div class="card-content mb-5 border">
+              <h3 class="text-info text-center">Back-End</h3>
               <div class="row text-center">
                 <div class="col s4 m2">
                   <img
@@ -183,9 +194,7 @@
                   />express
                 </div>
               </div>
-            </div>
 
-            <div class="card-content mb-5">
               <div class="row text-center">
                 <div class="col s4 m2">
                   <img
@@ -210,7 +219,9 @@
                 </div>
               </div>
             </div>
-            <div class="card-content mb-5">
+
+            <div class="card-content mb-5 border">
+              <h3 class="text-info text-center">Other</h3>
               <div class="row text-center">
                 <div class="col s4 m2">
                   <img
