--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </div>
               </div>
 
-              <div class="row text-center">
+              <div class="row text-center mt-5">
                 <div class="col s4 m2">
                   <img
                     alt=""
